--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="teal_300">#3DDCBC</color>
-    <color name="teal_400">#34B89D</color>
-    <color name="teal_700">#018786</color>
+    <color name="teal_300">#FF3DDCBC</color>
+    <color name="teal_400">#FF34B89D</color>
+    <color name="teal_700">#FF018786</color>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_400">#8E51E6</color>
+    <color name="purple_400">#FF8E51E6</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="white_dirty">#DAD4D4</color>
+    <color name="white_dirty">#FFDAD4D4</color>
+    <color name="warning_red">#FFFF4444</color>
 </resources>
