Score peak bug fix and Room Record Database implementation

--- a/app/src/main/res/layout/dialog_gameover.xml
+++ b/app/src/main/res/layout/dialog_gameover.xml
@@ -7,12 +7,11 @@
     <TextView
         android:id="@+id/tv_header"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentTop="true"
+        android:layout_height="@dimen/header_height"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="0dp"
-        android:background="@color/purple_700"
+        android:background="@color/pink_600"
         android:gravity="center"
         android:text="@string/game_over"
         android:textColor="@color/white"
