--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_400">#FF8E51E6</color>
     <color name="purple_700">#FF3700B3</color>
+    <color name="pink_600">#C618B5</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white_dirty">#FFDAD4D4</color>
