--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="tv_result_text_size">20sp</dimen>
     <dimen name="tv_result_text_margin">8dp</dimen>
     <dimen name="tv_result_handler_text_size">17sp</dimen>
+    <dimen name="header_height">70dp</dimen>
 </resources>
