--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,8 @@
     <dimen name="tv_result_text_margin">8dp</dimen>
     <dimen name="tv_result_handler_text_size">17sp</dimen>
     <dimen name="header_height">70dp</dimen>
+    <dimen name="btn_ranking_margin_top">5dp</dimen>
+    <dimen name="btn_ranking_margin_end">10dp</dimen>
+    <dimen name="btn_ranking_text_size">10sp</dimen>
+    <dimen name="ranking_list_margin">10dp</dimen>
 </resources>
